# simdog

./: .gitignore  README.md  save_Map.sh  start.sh
install/: local_setup.sh  setup.sh
install/champ/include/champ/: LICENSE  README.md
install/champ/include/champ/bla/: basic_linear_algebra.h  memory_delegate.h
install/champ/include/champ/body_controller/: body_controller.h
install/champ/include/champ/geometry/: geometry.h
install/champ/include/champ/kinematics/: kinematics.h
install/champ/include/champ/leg_controller/: leg_controller.h  phase_generator.h  trajectory_planner.h
install/champ/include/champ/macros/: macros.h
install/champ/include/champ/odometry/: odometry.h
install/champ/include/champ/quadruped_base/: quadruped_base.h  quadruped_components.h  quadruped_joint.h  quadruped_leg.h
install/champ/include/champ/utils/: urdf_loader.h  xmlrpc_helpers.h
install/champ/share/champ/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/champ/share/champ/cmake/: ament_cmake_export_include_directories-extras.cmake  champConfig-version.cmake  champConfig.cmake
install/champ/share/champ/environment/: ament_prefix_path.dsv  path.dsv
install/champ_base/lib/champ_base/: message_relay_node
install/champ_base/share/champ_base/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/champ_base/share/champ_base/cmake/: champ_baseConfig.cmake  (+3 more)
install/champ_bringup/lib/champ_bringup/: joint_calibrator_relay.py
install/champ_bringup/share/champ_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/champ_config/share/champ_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/champ_description/share/champ_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/champ_gazebo/lib/champ_gazebo/: contact_sensor
install/champ_gazebo/share/champ_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/champ_msgs/share/champ_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/champ_navigation/share/champ_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/champ_teleop/lib/champ_teleop/: champ_teleop.py
install/champ_teleop/share/champ_teleop/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/go2_config/share/go2_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/go2_description/share/go2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/lio_sam/include/lio_sam/: utility.hpp
install/lio_sam/lib/lio_sam/: lio_sam_featureExtraction  lio_sam_imageProjection  lio_sam_imuPreintegration  lio_sam_mapOptimization
install/lio_sam/share/lio_sam/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/realsense_ros_gazebo/share/realsense_ros_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/LIO-SAM/config/: params.yaml
src/LIO-SAM/launch/: lidar.launch.py  run.launch.py
src/LIO-SAM/src/: imuPreintegration.cpp  mapOptmization.cpp
src/ndt_omp_ros2/: CMakeLists.txt
src/ndt_relocalization/: CMakeLists.txt  package.xml
src/ndt_relocalization/launch/: ndt_localization.launch.py
src/ndt_relocalization/rviz/: ndt_localization.rviz  ndt_localization_enhanced.rviz
src/ndt_relocalization/src/: map_publisher.cpp  ndt_relocalization_node.cpp
src/unitree-go2-ros2/champ_teleop/: champ_teleop.py
(+520 files in other folders)
